--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modjoy-login</title>
     <link rel="stylesheet" href="style.css">
-    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,11 +21,11 @@
     <main>
         <h2>เข้าสู่ระบบ</h2>
         <form action="">
-            <div class="TextBox">
+            <div class="TextBox" id="EmailBox">
                 <label for="email">อีเมล</label>
                 <input type="email" name="" id="">
             </div>
-            <div class="TextBox">
+            <div class="TextBox" id="PasswordBox">
                 <label for="password">รหัสผ่าน</label>
                 <input type="password" name="" id="">
             </div>
