--- a/Login.html
+++ b/Login.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>MODJOY - Login</title>
-    <link rel="stylesheet" href="style.css">
+    <title>MODJOY - เข้าสู่ระบบ</title>
+    <link rel="stylesheet" href="/css/page-auth.css">
+    <link rel="stylesheet" href="/css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +22,7 @@
     <main class="login-main">
         <h2>เข้าสู่ระบบ</h2>
 
-        <form action="/login-process" method="POST" class="login-form">
+        <form action="/home-page.html" method="POST" class="login-form">
 
             <div class="form-group">
                 <label for="email">อีเมล</label>
