--- a/home-page.html
+++ b/home-page.html
@@ -9,29 +9,54 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
-        rel="stylesheet">
-
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Icons">
+        href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap" />
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
     <header class="home-header">
-        <span class="material-symbols-outlined">menu</span>
+        <button class="material-symbols-outlined">menu</button>
         <img src="Resource/img/small-logo.png" alt="MODJOY Logo">
-        <span class="material-symbols-outlined">add</span>
-
+        <a class="material-symbols-outlined" href="/add-room.html">add</a>
     </header>
     <main class="home-main">
-        <div class="search-bar">
-            <input type="text" placeholder="ค้นหากิจกรรมที่คุณชื่นชอบ..." id="search-input">
-            <span class="material-symbols-outlined">search</span>
+        <div class="top-bar-search">
+            <div class="search-bar">
+                <input type="text" placeholder="ค้นหากิจกรรมที่คุณชื่นชอบ..." id="search-input">
+                <button class="material-symbols-outlined" href="">search</button>
+            </div>
+            <button class="material-symbols-outlined" href="">filter_alt</button>
         </div>
+
+        <section class="rooms-List">
+            <div class="room-item">
+                <div class="header-item">
+                    <span id="date-activity">30<br>ต.ค.</span>
+                </div>
+                <div class="body-item">
+                    <span class="separator-line"></span>
+                    <div class="frist-row-item-body">
+                        <h2>ชื่อกิจกรรม</h2><span><span class="material-symbols-outlined">person</span>3/10</span>
+                    </div>
+                    <div class="second-row-item-body" id="tag-list-item">
+                        <p>Tag: </p>
+                        <span>อ่านหนังสือ</span>
+                        <span>Calculus</span>
+                    </div>
+                    <div class="third-row-item-body">
+                        <p>สถานที่: </p>
+                        <span id="address-activity">หอสมุด N10</span>
+                        <span id="time-activity">
+                            <span class="material-symbols-outlined">pace</span>
+                            <h3>13:00 - 14:00</h3>
+                        </span>
+                    </div>
+                </div>
+                <button>ดูรายละเอียด</button>
+            </div>
+        </section>
     </main>
 
 </body>
