--- a/home-page.html
+++ b/home-page.html
@@ -32,29 +32,33 @@
 
         <section class="rooms-List">
             <div class="room-item">
+
                 <div class="header-item">
-                    <span id="date-activity">30<br>ต.ค.</span>
+                    <div class="group-date-month">
+                        <span id="date-activity">30</span>
+                        <span id="month-activity">ต.ค.</span>
+                    </div>
                 </div>
+                <span class="separator-line"></span>
                 <div class="body-item">
-                    <span class="separator-line"></span>
                     <div class="frist-row-item-body">
                         <h2>ชื่อกิจกรรม</h2><span><span class="material-symbols-outlined">person</span>3/10</span>
                     </div>
-                    <div class="second-row-item-body" id="tag-list-item">
-                        <p>Tag: </p>
-                        <span>อ่านหนังสือ</span>
-                        <span>Calculus</span>
+                    <div class="second-row-item-body">
+                        <span id="tag-list-item">Tag: <span>อ่านหนังสือ</span><span>Calculus</span><span>Calculus</span><span>Calculus</span><span>Calculus</span></span>
                     </div>
                     <div class="third-row-item-body">
-                        <p>สถานที่: </p>
-                        <span id="address-activity">หอสมุด N10</span>
+                        <div>
+                            <span>สถานที่: <span id="address-activity">หอสมุด N10</span></span>
+                        </div>
                         <span id="time-activity">
                             <span class="material-symbols-outlined">pace</span>
-                            <h3>13:00 - 14:00</h3>
+                            <span>13:00 - 14:00</span>
                         </span>
                     </div>
                 </div>
-                <button>ดูรายละเอียด</button>
+
+                <button class="btn">ดูรายละเอียด</button>
             </div>
         </section>
     </main>
