--- a/home-page.html
+++ b/home-page.html
@@ -42,10 +42,13 @@
                 <span class="separator-line"></span>
                 <div class="body-item">
                     <div class="frist-row-item-body">
-                        <h2>ชื่อกิจกรรม</h2><span><span class="material-symbols-outlined">person</span>3/10</span>
+                        <h2>อ่านแคลกันครับพวกลิง</h2><span><span class="material-symbols-outlined">person</span>3/10</span>
                     </div>
                     <div class="second-row-item-body">
-                        <span id="tag-list-item">Tag: <span>อ่านหนังสือ</span><span>Calculus</span><span>Calculus</span><span>Calculus</span><span>Calculus</span></span>
+                        <p>Tag:</p>
+                        <div id="tag-list-item">
+                            <span>อ่านหนังสือ</span><span>Calculus</span><span>Calculus</span>
+                        </div>
                     </div>
                     <div class="third-row-item-body">
                         <div>
