--- a/room-detail-page.html
+++ b/room-detail-page.html
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <form action="/add-room.html" class="add-room-form">
+        <form action="/add-room.html" class="detail-room-form">
 
             <div class="form-group">
                 <label for="room-id">ไอดี</label>
