--- a/add-room-page.html
+++ b/add-room-page.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_back_ios" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+</head>
 
 <body>
     <header class="add-home-header">
@@ -38,12 +39,12 @@
 
             <div class="form-group">
                 <label for="room-name">ชื่อห้อง</label>
-                <input type="text" name="room-name" id="room-name" required>
+                <input type="text" id="room-name" name="room-name" required>
             </div>
 
             <div class="form-group">
-                <label for="place-name">ชื่อสถานที่</label>
-                <input type="text" id="place-name" name="place-name">
+                <label for="address-activity">ชื่อสถานที่</label>
+                <input type="text" id="address-activity" name="address-activity" class="address-activity-input">
             </div>
 
             <div class="form-group time-input-group">
@@ -54,21 +55,25 @@
             </div>
 
             <div class="form-group">
-                <label for="date-input">วัน / เดือน / ปี</label>
-                <input type="date" id="date-input" class="date-input" name="activity_date" placeholder="วัน">
+                <label for="date-activity">วัน / เดือน / ปี</label>
+                <input type="date" id="date-activity" class="date-input" name="date-activity" placeholder="วัน">
             </div>
 
             <div class="form-group">
-                <label for="detail">รายละเอียด</label>
-                <textarea id="detail" name="detail" class="detail-textarea"></textarea>
+                <label for="room-detail">รายละเอียด</label>
+                <textarea id="room-detail" name="room-detail" class="detail-textarea"></textarea>
             </div>
 
             <div class="form-group">
-                <label for="tag">Tag :</label>
+                <label for="room-tag">Tag :</label>
                 <div class="tag-group">
-                    <input type="text" id="tag" name="tag">
+                    <input type="text" id="room-tag" name="room-tag">
                     <button type="button" class="btn">+</button>
                 </div>
+                <ul class="tag-list-item">
+                    <li>อ่านหนังสือ <button type="button" class="material-symbols-outlined">close</button></li>
+                    <li>calculus <button type="button" class="material-symbols-outlined">close</button></li>
+                </ul>
             </div>
 
             <div class="btn-box">
@@ -77,7 +82,7 @@
         </form>
 
     </main>
-    
+
     <footer class="login-footer">
         <div class="footer-links">
             <a href="/terms">ข้อตกลงการใช้งาน</a>
